--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Alex Z",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1073.0",
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
